--- a/HPCA2022/ref.bib
+++ b/HPCA2022/ref.bib
@@ -54,7 +54,6 @@
                and Optimization, {CGO} 2014, Orlando, FL, USA, February 15-19, 2014},
   pages     = {109},
   year      = {2014},
-  crossref  = {DBLP:conf/cgo/2014},
   url       = {https://dl.acm.org/citation.cfm?id=2544150},
   timestamp = {Fri, 30 Nov 2018 12:48:46 +0100},
   biburl    = {https://dblp.org/rec/conf/cgo/ZengR0AJ014.bib},
@@ -72,7 +71,6 @@
                May 2010},
   pages     = {525--534},
   year      = {2010},
-  crossref  = {DBLP:conf/icse/2010-1},
   url       = {https://doi.org/10.1145/1806799.1806875},
   doi       = {10.1145/1806799.1806875},
   timestamp = {Tue, 06 Nov 2018 11:06:55 +0100},
@@ -706,7 +704,6 @@ month={Sept},
                MCHPC@SC 2018, Dallas, TX, USA, November 11, 2018},
   pages     = {67--71},
   year      = {2018},
-  crossref  = {DBLP:conf/sc/2018mchpc},
   url       = {https://doi.org/10.1145/3286475.3286568},
   doi       = {10.1145/3286475.3286568},
   timestamp = {Sat, 22 Dec 2018 17:30:19 +0100},
@@ -1738,7 +1735,6 @@ author    = {David Gay and
                Design and Implementation (PLDI), Montreal, Canada, June 17-19, 1998},
   pages     = {313--323},
   year      = {1998},
-  crossref  = {DBLP:conf/pldi/1998},
   url       = {https://doi.org/10.1145/277650.277748},
   doi       = {10.1145/277650.277748},
   timestamp = {Tue, 06 Nov 2018 16:59:30 +0100},
@@ -2130,7 +2126,7 @@ month={Sept},}
 
 @misc{tcmallocnew,
   author = {Patryk Kaminski},
-  title = {"NUMA aware heap memory manager"},
+  title = {NUMA aware heap memory manager},
   year = {2012},
   howpublished = "\url{http://amd-dev.wpengine.netdna-cdn.com/wordpress/media/2012/10/NUMA_aware_heap_memory_manager_article_final.pdf}"
 }
@@ -2519,7 +2515,54 @@ month={March},}
   Title = {A Data-centric Profiler for Parallel Programs},
   Year = {2013},
   address = {Denver, CO, USA}}
+@INPROCEEDINGS{7847070,
 
+  author={L. {Zhu} and H. {Jin} and X. {Liao}},
+
+  booktitle={2016 IEEE Trustcom/BigDataSE/ISPA}, 
+
+  title={A Tool to Detect Performance Problems of Multi-threaded Programs on NUMA Systems}, 
+
+  year={2016},
+
+  volume={},
+
+  number={},
+
+  pages={1145-1152},
+
+  doi={10.1109/TrustCom.2016.0187}}
+  
+@inproceedings{NumaMMA,
+author = {Trahay, Fran\c{c}ois and Selva, Manuel and Morel, Lionel and Marquet, Kevin},
+title = {NumaMMA: NUMA MeMory Analyzer},
+year = {2018},
+isbn = {9781450365109},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3225058.3225094},
+doi = {10.1145/3225058.3225094},
+booktitle = {Proceedings of the 47th International Conference on Parallel Processing},
+articleno = {19},
+numpages = {10},
+keywords = {NUMA architectures, Data and threads placement, Memory sampling, Performance analysis},
+location = {Eugene, OR, USA},
+series = {ICPP 2018}
+}
+@inproceedings{Lachaize:2012:MMP:2342821.2342826,
+ author = {Lachaize, Renaud and Lepers, Baptiste and Qu{\'e}ma, Vivien},
+ title = {MemProf: A Memory Profiler for NUMA Multicore Systems},
+ booktitle = {Proceedings of the 2012 USENIX Conference on Annual Technical Conference},
+ series = {USENIX ATC'12},
+ year = {2012},
+ location = {Boston, MA},
+ pages = {5--5},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=2342821.2342826},
+ acmid = {2342826},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
 @misc{Intel:VTune,
   Author = {{Intel Corporation}},
   Date-Added = {2008-12-05 14:59:27 -0600},
