--- a/HPCA2022/tongping.bib
+++ b/HPCA2022/tongping.bib
@@ -5,6 +5,20 @@ Hongyu Liu and Tong Zhang and Changhee Jung and Dongyoon Lee and Tongping Liu},
   booktitle = {``The 51st Annual IEEE/ACM International Symposium on Microarchitecture  (Micro'18)''},
 }
 
+@inproceedings{NumaPerf,
+author = {Zhao, Xin and Zhou, Jin and Guan, Hui and Wang, Wei and Liu, Xu and Liu, Tongping},
+title = {NumaPerf: Predictive NUMA Profiling},
+year = {2021},
+isbn = {9781450383356},
+url = {https://doi.org/10.1145/3447818.3460361},
+doi = {10.1145/3447818.3460361},
+booktitle = {Proceedings of the ACM International Conference on Supercomputing},
+pages = {52–62},
+numpages = {11},
+keywords = {NUMA profiling, performance optimization, profiler},
+location = {Virtual Event, USA},
+series = {ICS '21}
+}
 @inproceedings{Guarder, 
 author = {Sam Silvestro and 
 Hongyu Liu and Tianyi Liu and Zhiqiang Lin and Tongping Liu},
@@ -183,7 +197,6 @@ author = {Silvestro, Sam and Yuen, Timothy T. and Crosser, Corey and Zhu, Dakai 
                November 03, 2017},
   pages     = {2389--2403},
   year      = {2017},
-  crossref  = {DBLP:conf/ccs/2017},
   url       = {http://doi.acm.org/10.1145/3133956.3133957},
   doi       = {10.1145/3133956.3133957},
   timestamp = {Sat, 28 Oct 2017 18:38:40 +0200},
