--- a/HPCA2022/numalloc.tex
+++ b/HPCA2022/numalloc.tex
@@ -1,12 +1,13 @@
 \documentclass[conference]{IEEEtran}
 
-\usepackage{cite}
+%\usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{graphics} 
+\usepackage{subfig}
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage{txfonts}
@@ -50,7 +51,7 @@
 \newcommand{\JE}{\texttt{jemalloc}}
 \newcommand{\NA}{\texttt{NUMAlloc}}
 \newcommand{\NM}{\texttt{NUMAlloc}}
-\newcommand{\TN}{TcMalloc-NUMA}
+\newcommand{\TN}{TCMalloc-NUMA}
 
 \newcommand{\pthread}{\texttt{pthread}}
 \newcommand{\pthreads}{\texttt{pthreads}}
@@ -60,7 +61,7 @@
 
 \pagenumbering{arabic}
 
-\title{NUMAlloc: Fine-Grained NUMA Memory Allocator} 
+\title{NUMAlloc: Fine-Grained NUMA  Allocator} 
 \author{{\normalsize{HPCA 2022 Submission
       \textbf{\#\hpcasubmissionnumber} -- Confidential Draft -- Do NOT Distribute!!}}}
 
