--- a/EuroSys2022/intro.tex
+++ b/EuroSys2022/intro.tex
@@ -5,7 +5,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where each node/processor can access its own memory controller concurrently in theory. However, it is extremely challenging to achieve the expected scalability for multithreaded applications. One notorious issue is remote accesses that a task accesses the memory located in a remote node, since the latency of remote accesses is much higher than that of local accesses~\cite{Blagodurov:2011:CNC:2002181.2002182}. In addition to that, node imbalance may actually introduce the congestion of memory controllers or interconnection ~\cite{Blagodurov:2011:CNC:2002181.2002182}. Therefore, it is critical to reducing remote accesses or node imbalance for multithreaded applications. Although programmers could employ the assistance of different profiling tools to fix NUMA performance issues within applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they cannot fix NUMA performance issues caused by a memory allocator.
+The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where each processor (or node interchangeably) can access its own memory controller concurrently in theory. However, it is extremely challenging to achieve the expected scalability for multithreaded applications. One notorious issue is caused by remote accesses that a task accesses the memory located in a remote node, which hurts the application performance since the latency of remote accesses is much higher than that of local accesses~\cite{Blagodurov:2011:CNC:2002181.2002182}. In addition to that, node imbalance may actually introduce the congestion of memory controllers or interconnection ~\cite{Blagodurov:2011:CNC:2002181.2002182}. Therefore, it is critical to reducing remote accesses or node imbalance for multithreaded applications. Although programmers could employ the assistance of different profiling tools to fix NUMA performance issues within applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they cannot fix NUMA performance issues caused by a memory allocator.
 %For instance, the latency of remote accesses is typically double to that of local accesses. 
 
 However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TCMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, SuperMalloc~\cite{supermalloc}, and  Scalloc~\cite{Scalloc}, which were designed for symmetric multiprocessing machines. As a result, they cannot achieve good performance for NUMA architecture, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation. 
@@ -23,7 +23,7 @@ Further, none of these allocators balance the workload between nodes, another so
 
 A \textbf{origin-based memory management} is proposed to ensure that memory allocations are always satisfied from the local node of the requesting thread. Note that this is significantly different from the first-touch policy~\cite{lameter2013numa} that allocates a physical page from the node with the first touch, since the first-touch policy does not handle deallocations of objects. Instead, the origin-based memory management will track the origin of each object, and return a freed object based on its origin: a freed object will be placed into the deallocating thread's local buffer (heap) \textbf{only if} it is originated from the same node that the current thread is running on; otherwise, it will be returned to its original node. \textit{Second}, \NM{} introduces an origin-computable design that the physical origin can be simply computed within constant time, as further described in Section~\ref{sec:overview}. This design helps reduce the overhead of checking the origin of each object upon deallocations. \textit{Third}, it also includes an origin-based allocation that will perform the allocations based on the origin of the thread, where each thread is pinned to a specific node as described below. These mechanisms altogether ensure that all objects allocated by a thread will be always originated (pysically) from the same node as the thread. 
 
-Further, two mechanisms are proposed to reduce load imbalance among different NUMA nodes. The first mechanism is a \textbf{node-balanced thread binding} that reduces remote accesses and loads imbalance concurrently. We argue that the thread binding should be the \textit{first-class citizen} for the NUMA memory allocator. The cross-node migration of a thread will basically turn all of its previously local accesses into remote ones, and confuse its consequent memory allocations and deallocations.  \NM{} is the first memory allocator that embeds the node-balanced thread binding inside, although the thread-binding idea is not new. \NM{} binds threads to nodes in a round-robin way so that each node will have a similar number of threads, helping reduce the congestion of a particular memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. We evaluated that this node-balanced thread binding will also benefit two other allocators.  The second mechanism is \textbf{an interleaved heap} for potentially-shared objects from the main thread, where physical pages of this heap are allocated from different physical nodes in an interleaved way. This is inspired by existing profilers that shared objects allocated from the initial/main thread are the most common source of performance degradation in the NUMA architecture~\cite{XULIU, MemProf}. With the default first-touch policy, these objects will be allocated from the node of the main thread. However, concurrent accesses from multiple children threads will make this node the performance bottleneck. Instead, \NM{} allocates potentially-shared objects of the main thread (before creating children threads) from the interleaved heap, which helps distribute concurrent accesses from children threads to all nodes. Note that the interleaved heap my introduce unnecessary remote accesses for the initial thread in the serial phase, since it will turn some local accesses to remote ones. That is, interleaved heap  should be employed cautiously. However, it is an easy task to determine this that the interleaved heap is not a good option for applications spending more time in the serial phase .    
+Further, two mechanisms are proposed to reduce load imbalance among different NUMA nodes. The first mechanism is a \textbf{node-balanced thread binding} that reduces remote accesses and loads imbalance concurrently. We argue that the thread binding should be the \textit{first-class citizen} for the NUMA memory allocator, as the cross-node migration of a thread will basically turn all of its previously local accesses into remote ones, and confuse its consequent memory allocations and deallocations. \NM{} is the first memory allocator that embeds the node-balanced thread binding inside, although the thread-binding idea is not new. \NM{} binds threads to nodes in a round-robin way so that each node will have a similar number of threads, helping reduce the congestion of a particular memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. We evaluated that this node-balanced thread binding will also benefit two other allocators.  The second mechanism is \textbf{an interleaved heap} for potentially-shared objects from the main thread, where physical pages of this heap are allocated from different physical nodes in an interleaved way. This is inspired by existing profilers that shared objects allocated from the initial/main thread are the most common source of performance degradation in the NUMA architecture~\cite{XULIU, MemProf}. With the default first-touch policy, such objects will be allocated physically from the node of the main thread. But they can be accessed by multiple children threads (possibly running on different nodes) concurrently, making this node the performance bottleneck. Instead, \NM{} allocates potentially-shared objects of the main thread  from all nodes evenly,  which helps distribute concurrent accesses from children threads to all nodes. Note that the interleaved heap my introduce unnecessary remote accesses for the initial thread in the serial phase. That is, the interleaved heap should be exploited cautiously. Luckily, it is easy to determine that the interleaved heap is not a good option for applications spending a high percentage of time in the serial phase.    
 %Note that objects from the interleaved heap will be always tracked in its own corresponding freelists. , which reduces load imbalance for the initial node that the main thread is running on
 %Due to the binding, \NM{} can  allocate the metadata of each thread (e.g., per-thread buffer) from the local node, which cannot be done without the binding. 
 
@@ -34,9 +34,9 @@ Further, two mechanisms are proposed to reduce load imbalance among different NU
  
 \NM{} also has some implementation novelty. 
 %It designs  has many per-thread and per-node heaps, it is necessary to move freed objects between per-thread freelists and per-node freelists frequently. 
-It designs an efficient mechanism that could migrate objects between different freelists, without traversing all objects in the freelists as TCMalloc~\cite{tcmalloc}. 
+It designs an efficient mechanism that could move objects between different freelists, without traversing all objects in the freelists as TCMalloc~\cite{tcmalloc}. 
 %Due to the binding, the metadata of per-thread and per-node heap on the local nodes in order to further reduce unnecessary remote accesses.  
-It also reduces memory consumption of transparent huge pages by making multiple threads share the same memory block, overcoming the significant memory overhead issue as Scalloc~\cite{Scalloc}. 
+It also reduces memory consumption of transparent huge pages by making multiple threads share the same memory block, overcoming the significant memory overhead like Scalloc~\cite{Scalloc}. 
 
 We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TCMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, Scalloc~\cite{Scalloc}, and mimalloc~\cite{mimalloc}. \NM{} achieves around 18.5\%  (GEOMEAN) speedup comparing to the default Linux allocator, which is also 15.8\% faster than the second-best one (e.g., TCMalloc). For the best case, \NM{} runs up to $6.4\times$ faster than the default allocator, and $4.6\times$ faster than the second-best one (TCMalloc). \NM{} is much more scalable than other allocators based on our evaluation. \NM{} is ready for practical employment, due to its high performance and good scalability. Overall, this paper makes the following contributions:
 
