--- a/EuroSys2022/relatedwork.tex
+++ b/EuroSys2022/relatedwork.tex
@@ -25,10 +25,15 @@ Debes et al. propose the combination of enhanced work-pushing and deferred alloc
 
 \paragraph{NUMA Libraries:}
 Cantalupo et al. propose multiple APIs that allow users to manage their memory in fine granularity by combining with multiple existing system calls~\cite{cantalupo2015memkind}. However, they are not targeting a general purpose allocator, since it requires programmers to manage the memory explicitly.  Majo et al. propose multiple source-code based  algorithmic changes in order to improve data sharing and memory access patterns for NUMA architectures~\cite{6704666}. Williams et al. propose to group data structures that can be migrated together with arenas~\cite{WilliamsI0L18}. 
-Shoal also proposes a set of APIs that allow the user to specify memory access patterns~\cite{Kaestle:2015:SSA:2813767.2813787}. Then it could automatically replicate or distribute the memory to different NUMA nodes automatically. But both of them need significant manual effort to employ this. 
-XPV extends virtualization technique by considering NUMA-topology and extending virtualization to SRLs ~\cite{Bui:2019:EPV:3302424.3303960}.
+Shoal also proposes a set of APIs that allow the user to specify memory access patterns~\cite{Kaestle:2015:SSA:2813767.2813787}. 
+%Then it could automatically replicate or distribute the memory to different NUMA nodes automatically. 
+But both of them need significant manual effort to employ this. 
+%XPV extends virtualization technique by considering NUMA-topology and extending virtualization to SRLs ~\cite{Bui:2019:EPV:3302424.3303960}.
 
 %\todo{Changing the following two paragraphs}
-\paragraph{Reactive Systems for NUMA Architecture:} Some systems migrate tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. They improve the performance automatically without human involvement. However, these systems impose additional overhead (sometimes unnecessarily)  by migrating tasks or physical pages reactively. Further, a reactive approach cannot reduce remote accesses by the migration, if objects of the same page are concurrently accessed by multiple threads in multiple nodes~\cite{Gaud:2014:LPM:2643634.2643659}. \NM{} belongs to a proactive approach that does not require explicit and page migration, which is complementary to reactive systems. It is possible to combine these two together to achieve better performance. 
+\paragraph{Reactive Systems for NUMA Architecture:} Some systems migrate tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. 
+%They improve the performance automatically without human involvement. However, these systems impose additional overhead (sometimes unnecessarily)  by migrating tasks or physical pages reactively. Further, a reactive approach cannot reduce remote accesses by the migration, if objects of the same page are concurrently accessed by multiple threads in multiple nodes~\cite{Gaud:2014:LPM:2643634.2643659}. 
+\NM{} belongs to a proactive approach that does not require explicit and page migration, which is complementary to these reactive systems. 
+%It is possible to combine these two together to achieve better performance. 
 
 %The second approach relies on programmers to manage memory allocations and task assignments explicitly~\cite{Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require significant human effort to rewrite the programs, where legacy systems cannot benefit automatically. 
